bluec-tests/tests/invalid/types_bool/array_init_unary.c

int main(void) {
    _Bool values[4] = { 1++, --0, &1, *0 };

    return 0;
}
